# my-python-project-template

./: .copier-answers.yml  .pre-commit-config.yaml  README.md  Taskfile.yml  copier.yaml  pyproject.toml
.github/workflows/: mypy.yml  pytest.yml  ruff.yml
src/my_python_project_template/: __init__.py
tests/: test_main.py
