[project]
name = "my-python-project-template"
version = "0.2.0"
description = "A python project template with uv, bump-my-version, mypy, pytest, ruff and a taskfile."
readme = "README.md"
authors = [
    { name = "Kugeleis", email = "9948777+Kugeleis@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
my-python-project-template = "my_python_project_template:main"

[build-system]
requires = ["uv_build>=0.11.11,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "bump-my-version>=1.3.0",
    "mypy>=2.0.0",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.12",
]

[tool.bumpversion]
# current_version auto-detected from project.version
commit           = true
commit_args      = ""
tag              = true
regex            = true
search           = '^version\s*=\s*"{current_version}"$'
replace          = 'version = "{new_version}"'
allow_dirty      = true
pre_commit_hooks = ["uv sync", "git add uv.lock"]

[[tool.bumpversion.files]]
filename = "pyproject.toml"

[tool.mypy]
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[tool.ruff]
target-version = "py313"
line-length = 88

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "RUF", # Ruff-specific rules
]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["my_python_project_template"]
